src/index.css
/* ... */
:root[data-theme='dark'] .accordion-item {
  background: transparent !important;
}

:root[data-theme='dark'] .accordion-button,
:root[data-theme='dark'] .btn-outline-dark {
  color: var(--bs-white);
  background: transparent !important;
  border-color: var(--bs-gray-800);
}

:root[data-theme='dark'] .btn-outline-dark:hover {
  background-color: var(--bs-gray-dark) !important;
  border-color: var(--bs-gray-dark) !important;
}

:root[data-theme='dark'] code {
  color: var(--bs-gray-300);
}

:root[data-theme='dark'] .offcanvas {
  background-color: var(--bs-gray-900);
}

:root[data-theme='dark'] .spinner-border {
  border-color: var(--bs-white) !important;
  border-right-color: transparent !important;
}

:root[data-theme='dark'] .modal-content {
  background-color: var(--bs-gray-900);
}

:root[data-theme='dark'] .modal-header .btn-close {
  background-color: var(--bs-gray-900) !important;
}

:root[data-theme='dark'] .form-control:disabled,
.form-control[readonly] {
  background-color: var(--bs-gray-500);
}

:root[data-theme='dark'] .form-control:disabled::placeholder {
  color: var(--bs-gray-600);
}

